--- a/old_planner_api.csproj
+++ b/old_planner_api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Mime-Detective" Version="23.10.1" />
     <PackageReference Include="Mime-Detective.Definitions.Exhaustive" Version="23.10.1" />
