--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,10 @@
     "Issuer": "issuer",
     "Audience": "",
     "Key": "testy12%GDSA^7%#4323sfdgDAcz@#43"
+  },
+
+  "GoogleSettings": {
+    "ClientId": "190686100719-4fq3biuiq9c3iaaulfglnm9rrkenuafl.apps.googleusercontent.com",
+    "ClientSecret": "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"
   }
 }
