change auth method

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=test.db"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=med-game;Username=postgres;Password=*Walpy"
   },
   "JwtSettings": {
     "Issuer": "issuer",
