save email messages

--- a/appsettings.json
+++ b/appsettings.json
@@ -18,5 +18,12 @@
   "GoogleSettings": {
     "ClientId": "190686100719-4fq3biuiq9c3iaaulfglnm9rrkenuafl.apps.googleusercontent.com",
     "ClientSecret": "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"
+  },
+  "EmailServiceSettings": {
+    "SenderName": "planner",
+    "SenderEmail": "elyi7367@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SenderPassword": "jtlb orgl ipav dhjf"
   }
 }
