--- a/appsettings.json
+++ b/appsettings.json
@@ -19,6 +19,11 @@
     "ClientId": "190686100719-4fq3biuiq9c3iaaulfglnm9rrkenuafl.apps.googleusercontent.com",
     "ClientSecret": "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"
   },
+  "MailSettings": {
+    "ClientId": "8fee6de4275d4808bf33a39494abbd4f",
+    "ClientSecret": "0dfe268d0fc74c2d8fa60ce3a0182512",
+    "RedirectUri": "https://localhost:8888/signin-mail"
+  },
   "EmailServiceSettings": {
     "SenderName": "planner",
     "SenderEmail": "elyi7367@gmail.com",
